Record 수정 api 구현
